Fixed overflow issue
git-svn-id: http://smob.googlecode.com/svn/trunk@236 e4a05299-234b-0410-97c5-bf58ad63ebc6

--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,6 @@ a:hover {
 	border: 1px solid #666;;
 	margin-bottom: 10px;
 	padding: 5px;
-	height: 55px;
 }
 
 .internal {
